[package]
name = "mini-cloud-client"
version = "0.1.0"
authors = ["hsnavarro <ricksnavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laminar = "0.5.0"

[dependencies.sdl2]
version = "0.34.4"
default-features = false